Tue Jan 11 23:50:53 CET 2000  Sven Neumann <sven@gimp.org>

	* app/layer.c: in layer_new_from_tiles check if image_type has alpha 
	to avoid obscure bugs if the function is not called correctly

	* app/text_tool_cmds.c
	* tools/pdbgen/pdb/text_tool.pdb: added a hint about using border = -1
	to suppress cropping of empty spaces around the text

Tue Jan 11 14:36:55 PST 2000 Manish Singh <yosh@gimp.org>

	* libgimp/gimpcompat.h: let's not be redundant redundant. Made
	a real compat #define for gimp_image_find_parasite

2000-01-11  Garry R. Osgood <gosgood@idt.net>

	* app/disp_callbacks.c
	* app/gimage_mask.c
	* app/global_edit.c
	* app/interface.c
	* app/layer.c
	* app/layer.h
	* app/transform_core.c
	
	Followup to #4708. Some clients
	of layer_new_from_tiles() need to specify the
	kind of layer they need; added a GimpImageType
	parameter for this purpose. (A reference to a
	whole Drawable once was used for this purpose;
	Sven factored this out. Good Riddance). Function 
	internals are correct only with alpha-equipped image
	types, so don't ask for alpha-less types or
	furnish alpha-less tiles. <imho>This function is 
	not robust and is overused; its scope is to
	fatten TileManagers referenced by cut buffers
	into Layers. If you already have a layer, 
	consider yourself blessed and work with it.</imho> 
	Closes #5045.
	
	* app/paths_dialog.c paths_dialog_set_default_op() 
	now checks for the existence of the path_dialog
	before manipulating its internals. Closes #5049; 
	
Tue Jan 11 21:41:23 CET 2000  Sven Neumann <sven@gimp.org>

	* plug-ins/common/rotate.c: fixed the progressbar on 270 degrees 
	(bug #5108)

	* plug-ins/gap/gap_navigator_dialog.c: small help-related fix

2000-01-11  Michael Natterer  <mitch@gimp.org>

	* configure.in
	* plug-ins/Makefile.am
	* plug-ins/gpc/*: removed.

	* plug-ins/common/Makefile.am
	* plug-ins/common/plugin-defs.pl
	* plug-ins/common/blur.c
	* plug-ins/common/randomize.c: removed all calls to gpc functions.
